--- a/css/newmix.css
+++ b/css/newmix.css
@@ -4,10 +4,14 @@
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td {
 	padding: 0;
 	margin: 0;
-	font-family: "黑体";
+	font-family: "heiti", SimHei, STXihei, "华文黑体", "华文细黑";
 }
 a {
 	text-decoration: none;
+}
+area {
+	display: block;
+cursor: pointer;
 }
 #header {
 	position: fixed;
@@ -18,7 +22,7 @@ a {
 	z-index: 20;
 	text-align: center;
 	color: #5f6a7d;
-	font-family: "黑体";
+	font-family: "heiti", SimHei, STXihei, "华文黑体", "华文细黑";
 	font-size: 16px;
 	font-weight: bold;
 	padding: 10px 0 0 0;
@@ -53,6 +57,46 @@ a {
 	padding: 9px 18px;
 	display: block;
 }
+
+@media (min-width: 880px) and (max-width: 1035px) {
+#menu li a {
+	text-decoration: none;
+	color: #5f6a7d;
+	padding: 9px 4px;
+	display: block;
+}
+}
+
+@media (max-width: 880px) {
+#header .menulogo {
+	float: none;
+}
+#menu li a {
+	text-decoration: none;
+	color: #5f6a7d;
+	padding: 9px 4px;
+	display: block;
+}
+#header .menulogo img {
+	width: 132px;
+	height: 67px;
+}
+#menu li {
+	float: none;
+}
+#menu {
+	float: none;
+}
+#header {
+	height: 133px;
+}
+}
+
+@media (max-width: 650px) {
+#header {
+	height: 153px;
+}
+}
 #front_video {
 	width: 100%;
 	height: 100%;
@@ -81,7 +125,6 @@ a {
 	background-position: bottom;
 }
 #section0 .centertitle {
-	width: 50%;
 	margin: 10% auto;
 	padding-top: 5%;
 	text-align: center;
@@ -89,25 +132,25 @@ a {
 #section0 .xialaibox {
 	height: 169px;
 	text-align: center;
-	position: absolute;
 	z-index: 999;
 	width: 100%;
 	bottom: 123px;
 }
-#section0 .gaishucontent {
-	height: 123px;
+#section0 .gaishubox {
 	text-align: center;
 	position: absolute;
 	z-index: 999;
 	width: 100%;
 	bottom: 0;
+}
+#section0 .gaishucontent {
 	background: url(../res/textbgs.png);
 }
 #section0 .gaishucontent .gaishucn {
 	margin: 12px 10% 12px 10%;
 	min-height: 50px;
 	font-size: 14px;
-	font-family: "黑体";
+	font-family: "heiti", SimHei, STXihei, "华文黑体", "华文细黑";
 	line-height: 21px;
 	text-align: left;
 	color: #FFF;
@@ -115,141 +158,222 @@ a {
 #section0 .gaishucontent .gaishuen {
 	opacity: 0.5;
 }
-.slide .imgWrap
-{
+.slide .imgWrap {
 	width: 80%;
-	height:80%;
+	height: 80%;
 	margin: 10% auto;
 }
-.slide .imgWrap img
-{
-	width:100%;
+.slide .imgWrap img {
+	width: 100%;
 }
-
-
-.contactusbox
-{
+.contactusbox {
 	text-align: center;
-margin: 8% auto;
+	margin: 8% auto;
 }
-.ditubox
-{
+.ditubox {
 	text-align: center;
-width: 80%;
-margin: 8% auto;
+	width: 80%;
+	margin: 8% auto;
 }
-
-.ditubox .citybox
-{
+.ditubox .citybox {
 	width: 240px;
-height: 240px;
-border-radius: 50%;
-position: relative;
-}
-.citybox .cityaddrbox
-{
-	text-align: center;
-vertical-align: middle;
-margin: 0px auto;
-height: 100%;
-padding: 60px 20px;
-}
-
-.citybox .cityaddr
-{
-	font-family: 黑体;
-font-size: 14px;
-color: rgb(127, 127, 127);
-line-height: 25px;
-}
-.citybox .citytel
-{
-	font-family: 黑体;
-font-size: 14px;
-color: rgb(127, 127, 127);
-line-height: 35px;
-}
-.citybox .cityname
-{
+	height: 240px;
 	border-radius: 50%;
-position: absolute;
-top: 250px;
-font-family: 黑体;
-font-size: 14px;
-text-align: center;
-width: 100%;
-left: 0px;
+	position: relative;
 }
-#bjbox
-{
+.citybox:hover {
+	opacity: 0.5;
+	background: #000;
+	cursor: pointer;
+}
+.citybox .cityaddrbox {
+	text-align: center;
+	vertical-align: middle;
+	margin: 0px auto;
+	height: 100%;
+	padding: 60px 20px;
+}
+.citybox .cityaddr {
+	font-family: "heiti", SimHei, STXihei, "华文黑体", "华文细黑";
+	font-size: 14px;
+	color: rgb(127, 127, 127);
+	line-height: 25px;
+}
+.citybox .citytel {
+	font-family: "heiti", SimHei, STXihei, "华文黑体", "华文细黑";
+	font-size: 14px;
+	color: rgb(127, 127, 127);
+	line-height: 35px;
+}
+.citybox .cityname {
+	border-radius: 50%;
+	position: absolute;
+	top: 250px;
+	font-family: "heiti", SimHei, STXihei, "华文黑体", "华文细黑";
+	font-size: 14px;
+	text-align: center;
+	width: 100%;
+	left: 0px;
+	color: #FFF;
+}
+#bjbox {
 	background-image: url(../res/bjditu.png);
-background-size: 100%;
+	background-size: 100%;
 }
-#shbox
-{
+#shbox {
 	background-image: url(../res/shditu.png);
-background-size: 100%;
+	background-size: 100%;
 }
-#gzbox
-{
+#gzbox {
 	background-image: url(../res/gzditu.png);
-background-size: 100%;
+	background-size: 100%;
 }
-.sfull
-{
-	width:80%;
-	margin:7% auto;
-	text-align:center;
+.sfull {
+	width: 80%;
+	margin: 0 auto;
+	margin-top: 7%;
+	text-align: center;
 }
-.sfull img
-{
-	width:100%;
+.sfull img {
+	width: 100%;
 }
-.stitle
-{
-	width:80%;
-	margin:7% auto;
-	text-align:center;
+.stitle {
+	width: 80%;
+	margin: 0 auto;
+	margin-top: 7%;
+	text-align: center;
 }
-#section2 .stitle
-{
-	margin:5% auto;
+#section2 .stitle {
+	margin: 0 auto;
+	margin-top: 5%;
 }
-#section3 table
-{
-	width:80%;
+#section3 table {
+	width: 80%;
 	border: 1px #eeeeee solid;
 	margin: 0 auto;
 }
-#section3 table tr
-{
+#section3 table tr {
 	height: 80px;
 }
-#section3 table img
-{
+#section3 table img {
 	width: 113px;
-	height:67px;
+	height: 67px;
 }
-#section4
-{
+#section4 {
 	background: url(../res/anlibg.png);
 	background-size: cover;
 	padding-top: 0%;
 }
 #section4 li {
-height: auto;
-padding: 5px;
-width: 23%;
-display: inline-block;
-zoom: 1;
+	height: auto;
+	padding: 5px;
+	width: 23%;
+	display: inline-block;
+	zoom: 1;
 }
 #section4 .cover img {
-width:100%;
+	width: 100%;
 }
-
 #section4 .info {
-display:none;
-text-align: center;
--webkit-backface-visibility: hidden;
-backface-visibility: hidden;
+	display: none;
+	text-align: center;
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+#section5 .xinwenleft {
+	float: left;
+	width: 40%;
+	padding: 0;
+}
+#section5 .xinwenright {
+	float: right;
+	width: 40%;
+	padding: 0;
+}
+#section5 .xinwentitle {
+	width: 269px;
+}
+#section5 .xinwenlist {
+	color: #3297d3;
+	font-size: 18px;
+	font-family: "heiti", SimHei, STXihei, "华文黑体", "华文细黑";
+}
+#section5 .xinwenlist ul li {
+	margin-bottom: 5px;
+	line-height: 55px;
+	text-align: left;
+	background: url(../res/xinwenicon.png) no-repeat center left;
+	padding-left: 45px;
+	height: 55px;
+	overflow: hidden;
+}
+#section5 .topback {
+	position: absolute;
+	z-index: 9999;
+	right: 10px;
+	bottom: 150px;
+}
+#section5 .topback img {
+	width: 50px;
+	height: 50px;
+}
+#section5 .footer {
+	position: absolute;
+	width: 100%;
+	text-align: center;
+	bottom: 0;
+	background: #3297d3;
+	font-size: 18px;
+	color: #FFF;
+	font-weight: bold;
+	padding: 10px;
+}
+#section5 .footer a {
+	margin-left: 10px;
+	color: #ffffff;
+	font-size: 18px;
+	text-decoration: none;
+}
+#front_menu li a {
+	text-decoration: none;
+	color: #FFF;
+	font-size: 12px;
+	padding: 9px 18px;
+	display: block;
+}
+#front_menu li {
+	display: inline-block;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+	float: left;
+	padding-top: 15px;
+}
+#front_menu {
+	z-index: 70;
+	padding: 0;
+	margin: 0;
+	padding-top: 15px;
+	float: right;
+}
+.front_logo {
+	float: left;
+	padding-top: 15px;
+}
+.front_header_wrap {
+	width: 80%;
+	margin: 0 auto;
+}
+#front_header {
+	position: fixed;
+	height: 73px;
+	display: block;
+	width: 100%;
+	z-index: 9;
+	text-align: center;
+	color: #5f6a7d;
+	font-family: "heiti", SimHei, STXihei, "华文黑体", "华文细黑";
+	font-size: 16px;
+	font-weight: bold;
+	padding: 10px 0 0 0;
+	top: 0px;
 }
